@@ -20,9 +20,10 @@ package megamek.common.weapons;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Vector;
 
-import megamek.common.Aero;
+import megamek.MegaMek;
 import megamek.common.AmmoType;
 import megamek.common.BattleArmor;
 import megamek.common.Compute;
@@ -57,12 +58,14 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
     private static final long serialVersionUID = -1277649123562229298L;
     boolean handledAmmoAndReport = false;
 
+
     /**
      * This consructor may only be used for deserialization.
      */
     protected ArtilleryBayWeaponIndirectFireHandler() {
         super();
     }
+    
 
     /**
      * @param t
@@ -87,6 +90,45 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
         }
         return false;
     }
+        
+    @Override
+    protected void useAmmo() {
+        nweaponsHit = weapon.getBayWeapons().size();
+        for (int wId : weapon.getBayWeapons()) {
+            Mounted bayW = ae.getEquipment(wId);
+            // check the currently loaded ammo
+            Mounted bayWAmmo = bayW.getLinked();
+
+            if (bayWAmmo == null) {// Can't happen. w/o legal ammo, the weapon
+                // *shouldn't* fire.
+                MegaMek.getLogger().debug("Handler can't find any ammo! Oh no!");
+            }
+
+            int shots = bayW.getCurrentShots();
+            //if this option is on, we may have odd amounts of ammo in multiple bins. Only fire rounds that we have.
+            if (game.getOptions().booleanOption(OptionsConstants.ADVAERORULES_AERO_ARTILLERY_MUNITIONS)) {
+                if (bayWAmmo.getUsableShotsLeft() < 1) {
+                    nweaponsHit--;                    
+                } else {
+                    bayWAmmo.setShotsLeft(bayWAmmo.getBaseShotsLeft() - 1);
+                }
+            } else {
+                //By default rules, we have just one ammo bin with at least 10 shots for each weapon in the bay,
+                //so we'll track ammo normally and need to resolve attacks for all bay weapons.
+                for (int i = 0; i < shots; i++) {
+                    if (null == bayWAmmo
+                            || bayWAmmo.getUsableShotsLeft() < 1) {
+                        // try loading something else
+                        ae.loadWeaponWithSameAmmo(bayW);
+                        bayWAmmo = bayW.getLinked();
+                    }
+                    if (null != bayWAmmo) {
+                        bayWAmmo.setShotsLeft(bayWAmmo.getBaseShotsLeft() - 1);
+                    }
+                }
+            }
+        }
+    }
 
     /*
      * (non-Javadoc)
@@ -109,49 +151,50 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
                 r.newlines = 0;
                 r.subject = subjectId;
                 r.add(wtype.getName());
-                r.add(aaa.turnsTilHit);
+                r.add(aaa.getTurnsTilHit());
                 vPhaseReport.addElement(r);
                 Report.addNewline(vPhaseReport);
                 handledAmmoAndReport = true;
 
                 artyMsg = "Artillery bay fire Incoming, landing on round "
-                        + (game.getRoundCount() + aaa.turnsTilHit)
+                        + (game.getRoundCount() + aaa.getTurnsTilHit())
                         + ", fired by "
                         + game.getPlayer(aaa.getPlayerId()).getName();
                 game.getBoard().addSpecialHexDisplay(
                         aaa.getTarget(game).getPosition(),
                         new SpecialHexDisplay(
                                 SpecialHexDisplay.Type.ARTILLERY_INCOMING, game
-                                        .getRoundCount() + aaa.turnsTilHit,
+                                        .getRoundCount() + aaa.getTurnsTilHit(),
                                 game.getPlayer(aaa.getPlayerId()), artyMsg,
                                 SpecialHexDisplay.SHD_OBSCURED_TEAM));
             }
             // if this is the last targeting phase before we hit,
             // make it so the firing entity is announced in the
             // off-board attack phase that follows.
-            if (aaa.turnsTilHit == 0) {
+            if (aaa.getTurnsTilHit() == 0) {
                 setAnnouncedEntityFiring(false);
             }
             return true;
         }
-        if (aaa.turnsTilHit > 0) {
-            aaa.turnsTilHit--;
+        if (aaa.getTurnsTilHit() > 0) {
+            aaa.decrementTurnsTilHit();
             return true;
         }
         final Vector<Integer> spottersBefore = aaa.getSpotterIds();
         Coords targetPos = target.getPosition();
         final int playerId = aaa.getPlayerId();
-        boolean isFlak = (target instanceof VTOL) || (target instanceof Aero);
+        boolean isFlak = (target instanceof VTOL) || (target.isAero());
+        boolean asfFlak = target.isAero();
         boolean mineClear = target.getTargetType() == Targetable.TYPE_MINEFIELD_CLEAR;
-        boolean asfFlak = target instanceof Aero;
         Entity bestSpotter = null;
         if (ae == null) {
             System.err.println("Artillery Entity is null!");
             return true;
         }
+        
         Mounted ammoUsed = ae.getEquipment(aaa.getAmmoId());
-        final AmmoType atype = ammoUsed == null ? null : (AmmoType) ammoUsed
-                .getType();
+        final AmmoType atype = (AmmoType) ammoUsed.getType();
+        
         // Are there any valid spotters?
         if ((null != spottersBefore) && !isFlak) {
             // fetch possible spotters now
@@ -162,7 +205,7 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
                         public Targetable targ = target;
 
                         public boolean accept(Entity entity) {
-                            Integer id = new Integer(entity.getId());
+                            Integer id = Integer.valueOf(entity.getId());
                             if ((player == entity.getOwnerId())
                                     && spottersBefore.contains(id)
                                     && !(LosEffects.calculateLos(game,
@@ -170,7 +213,7 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
                                             .isBlocked()
                                     && entity.isActive()
                                     // airborne aeros can't spot for arty
-                                    && !((entity instanceof Aero) && entity
+                                    && !(entity.isAero() && entity
                                             .isAirborne())
                                     && !entity.isINarcedWith(INarcPod.HAYWIRE)) {
                                 return true;
@@ -184,14 +227,14 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
                 Entity ent = spottersAfter.next();
                 if (bestSpotter == null) {
                     bestSpotter = ent;
-                } else if (ent.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)
-                        && !bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+                } else if (ent.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)
+                        && !bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                     bestSpotter = ent;
                 } else if (ent.getCrew().getGunnery() < bestSpotter.getCrew().getGunnery()
-                        && !bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+                        && !bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                     bestSpotter = ent;
-                } else if (bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)
-                        && ent.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+                } else if (bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)
+                        && ent.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                     if (ent.getCrew().getGunnery() < bestSpotter.getCrew().getGunnery()) {
                         bestSpotter = ent;
                     }
@@ -203,7 +246,7 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
         // If at least one valid spotter, then get the benefits thereof.
         if (null != bestSpotter) {
             int foMod = 0;
-            if (bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+            if (bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                 foMod = -1;
             }
             int mod = (bestSpotter.getCrew().getGunnery() - 4) / 2;
@@ -237,7 +280,7 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
             else if (null != bestSpotter) {
                 // only add mods if it's not an automatic success
                 if (ae.aTracker.getModifier(weapon, targetPos) != TargetRoll.AUTOMATIC_SUCCESS) {
-                    if (bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+                    if (bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                         ae.aTracker.setSpotterHasForwardObs(true);
                     }
                     ae.aTracker.setModifier(ae.aTracker.getModifier(weapon, targetPos) - 1, targetPos);
@@ -305,14 +348,14 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
             addHeat();
         }
         
+        //In the case of misses, we'll need to hit multiple hexes
+        List<Coords> targets = new ArrayList<Coords>();
         if (!bMissed) {
-            if (!isFlak) {
-                r = new Report(3190);
-            } else {
-                r = new Report(3191);
-            }
+            r = new Report(3199);
             r.subject = subjectId;
+            r.add(nweaponsHit);
             r.add(targetPos.getBoardNum());
+            r.add(atype.getShortName());
             // Mine clearance has its own report which will get added
             if (!mineClear) {
                 vPhaseReport.addElement(r);
@@ -325,14 +368,10 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
                     new SpecialHexDisplay(SpecialHexDisplay.Type.ARTILLERY_HIT,
                             game.getRoundCount(), game.getPlayer(aaa
                                     .getPlayerId()), artyMsg));
-
         } else {
-            // direct fire artillery only scatters by one d6
-            // we do this here to avoid duplicating handle()
-            // in the ArtilleryWeaponDirectFireHandler
             Coords origPos = targetPos;
             int moF = toHit.getMoS();
-            if (ae.getCrew().getOptions().booleanOption(OptionsConstants.GUNNERY_OBLIQUE_ARTILLERY)) {
+            if (ae.hasAbility(OptionsConstants.GUNNERY_OBLIQUE_ARTILLERY)) {
                 // getMoS returns a negative MoF
                 // simple math is better so lets make it positive
                 if ((-moF - 2) < 1) {
@@ -341,40 +380,51 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
                     moF = moF + 2;
                 }
             }
-            targetPos = Compute.scatterDirectArty(targetPos, moF);
-            if (game.getBoard().contains(targetPos)) {
-                // misses and scatters to another hex
-                if (!isFlak) {
-                    r = new Report(3195);
-                    artyMsg = "Artillery missed here on round "
-                            + game.getRoundCount() + ", fired by "
-                            + game.getPlayer(aaa.getPlayerId()).getName();
-                    game.getBoard().addSpecialHexDisplay(
-                            origPos,
-                            new SpecialHexDisplay(
-                                    SpecialHexDisplay.Type.ARTILLERY_HIT, game
-                                            .getRoundCount(), game
-                                            .getPlayer(aaa.getPlayerId()),
+            //We're only going to display one missed shot hex on the board, at the intended target
+            artyMsg = "Artillery missed here on round "
+                    + game.getRoundCount() + ", fired by "
+                    + game.getPlayer(aaa.getPlayerId()).getName();
+            game.getBoard().addSpecialHexDisplay(
+                    origPos,
+                    new SpecialHexDisplay(
+                            SpecialHexDisplay.Type.ARTILLERY_HIT, game
+                                    .getRoundCount(), game
+                                    .getPlayer(aaa.getPlayerId()),
                                     artyMsg));
+            while (nweaponsHit > 0) {
+                //We'll generate a new report and scatter for each weapon fired
+                targetPos = Compute.scatterDirectArty(targetPos, moF);
+                if (game.getBoard().contains(targetPos)) {
+                    targets.add(targetPos);
+                    // misses and scatters to another hex
+                    if (!isFlak) {
+                        r = new Report(3202);
+                        r.subject = subjectId;
+                        r.newlines = 1;
+                        r.add(atype.getShortName());
+                        r.add(targetPos.getBoardNum());
+                        vPhaseReport.addElement(r);
+                    } else {
+                        r = new Report(3192);
+                        r.subject = subjectId;
+                        r.newlines = 1;
+                        r.add(targetPos.getBoardNum());
+                        vPhaseReport.addElement(r);
+                    }
                 } else {
-                    r = new Report(3192);
-                }
-                r.subject = subjectId;
-                r.add(targetPos.getBoardNum());
-                vPhaseReport.addElement(r);
-            } else {
-                // misses and scatters off-board
-                if (isFlak) {
-                    r = new Report(3193);
-                } else {
+                    // misses and scatters off-board
                     r = new Report(3200);
+                    r.subject = subjectId;
+                    r.newlines = 1;
+                    vPhaseReport.addElement(r);
                 }
-                r.subject = subjectId;
-                vPhaseReport.addElement(r);
+            nweaponsHit--;
+            }
+            //If we managed to land everything off the board, stop
+            if (targets.isEmpty()) {
                 return !bMissed;
             }
         }
-
         if (atype.getMunitionType() == AmmoType.M_FLARE) {
             int radius;
             if (atype.getAmmoType() == AmmoType.T_ARROW_IV) {
@@ -386,36 +436,99 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
             } else {
                 radius = 1;
             }
-            server.deliverArtilleryFlare(targetPos, radius);
+            if (!bMissed) {
+                //If we hit, only one effect will stack in the target hex
+                server.deliverArtilleryFlare(targetPos, radius);
+            } else {
+                //Deliver a round to each target hex
+                for (Coords c : targets) {
+                    server.deliverArtilleryFlare(c, radius);
+                }
+            }
             return false;
         }
         if (atype.getMunitionType() == AmmoType.M_DAVY_CROCKETT_M) {
             // The appropriate term here is "Bwahahahahaha..."
-            server.doNuclearExplosion(targetPos, 1, vPhaseReport);
+            if (!bMissed) {
+                //Keep blasting the target hex with each weapon in the bay that fired
+                while (nweaponsHit > 0) {
+                    server.doNuclearExplosion(targetPos, 1, vPhaseReport);
+                    nweaponsHit--;
+                }
+            } else {
+                //Deliver a round to each target hex
+                for (Coords c : targets) {
+                    server.doNuclearExplosion(c, 1, vPhaseReport);
+                }
+            }
             return false;
         }
         if (atype.getMunitionType() == AmmoType.M_FASCAM) {
-            server.deliverFASCAMMinefield(targetPos, ae.getOwner().getId(),
-                    atype.getRackSize(), ae.getId());
+            if (!bMissed) {
+                //If we hit, only one effect will stack in the target hex
+                server.deliverFASCAMMinefield(targetPos, ae.getOwner().getId(),
+                        atype.getRackSize(), ae.getId());
+            } else {
+                //Deliver a round to each target hex
+                for (Coords c : targets) {
+                    server.deliverFASCAMMinefield(c, ae.getOwner().getId(),
+                            atype.getRackSize(), ae.getId());
+                }
+            }
             return false;
         }
         if (atype.getMunitionType() == AmmoType.M_INFERNO_IV) {
-            server.deliverArtilleryInferno(targetPos, ae, subjectId,
-                    vPhaseReport);
+            if (!bMissed) {
+                //If we hit, only one effect will stack in the target hex
+                server.deliverArtilleryInferno(targetPos, ae, subjectId,
+                        vPhaseReport);
+            } else {
+                //Deliver a round to each target hex
+                for (Coords c : targets) {
+                    server.deliverArtilleryInferno(c, ae, subjectId,
+                            vPhaseReport);
+                }
+            }
             return false;
         }
         if (atype.getMunitionType() == AmmoType.M_VIBRABOMB_IV) {
-            server.deliverThunderVibraMinefield(targetPos, ae.getOwner()
-                    .getId(), atype.getRackSize(), waa.getOtherAttackInfo(), ae
-                    .getId());
+            if (!bMissed) {
+                //If we hit, only one effect will stack in the target hex
+                server.deliverThunderVibraMinefield(targetPos, ae.getOwner()
+                        .getId(), atype.getRackSize(), waa.getOtherAttackInfo(), ae
+                        .getId());
+            } else {
+                //Deliver a round to each target hex
+                for (Coords c : targets) {
+                    server.deliverThunderVibraMinefield(c, ae.getOwner()
+                            .getId(), atype.getRackSize(), waa.getOtherAttackInfo(), ae
+                            .getId());
+                }
+            }
             return false;
         }
         if (atype.getMunitionType() == AmmoType.M_SMOKE) {
-            server.deliverArtillerySmoke(targetPos, vPhaseReport);
+            if (!bMissed) {
+                //If we hit, only one effect will stack in the target hex
+                server.deliverArtillerySmoke(targetPos, vPhaseReport);
+            } else {
+                //Deliver a round to each target hex
+                for (Coords c : targets) {
+                    server.deliverArtillerySmoke(c, vPhaseReport);
+                }
+            }
             return false;
         }
         if (atype.getMunitionType() == AmmoType.M_LASER_INHIB) {
-            server.deliverLIsmoke(targetPos, vPhaseReport);
+            if (!bMissed) {
+                //If we hit, only one effect will stack in the target hex
+                server.deliverLIsmoke(targetPos, vPhaseReport);
+            } else {
+                //Deliver a round to each target hex
+                for (Coords c : targets) {
+                    server.deliverLIsmoke(c, vPhaseReport);
+                }
+            }
             return false;
         }
         int altitude = 0;
@@ -449,29 +562,55 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
                 server.removeMinefield(mf);
             }
         }
-
-        server.artilleryDamageArea(targetPos, aaa.getCoords(), atype,
-                subjectId, ae, isFlak, altitude, mineClear, vPhaseReport,
-                asfFlak, -1);
-
-        // artillery may unintentially clear minefields, but only if it wasn't
-        // trying to
-        if (!mineClear && game.containsMinefield(targetPos)) {
-            Enumeration<Minefield> minefields = game.getMinefields(targetPos)
-                    .elements();
-            ArrayList<Minefield> mfRemoved = new ArrayList<Minefield>();
-            while (minefields.hasMoreElements()) {
-                Minefield mf = minefields.nextElement();
-                if (server.clearMinefield(mf, ae, 10, vPhaseReport)) {
-                    mfRemoved.add(mf);
+        if (!bMissed) {
+            // artillery may unintentionally clear minefields, but only if it wasn't
+            // trying to. For a hit on the target, just do this once.
+            if (!mineClear && game.containsMinefield(targetPos)) {
+                Enumeration<Minefield> minefields = game.getMinefields(targetPos)
+                        .elements();
+                ArrayList<Minefield> mfRemoved = new ArrayList<Minefield>();
+                while (minefields.hasMoreElements()) {
+                    Minefield mf = minefields.nextElement();
+                    if (server.clearMinefield(mf, ae, 10, vPhaseReport)) {
+                        mfRemoved.add(mf);
+                    }
+                }
+                // we have to do it this way to avoid a concurrent error problem
+                for (Minefield mf : mfRemoved) {
+                    server.removeMinefield(mf);
                 }
             }
-            // we have to do it this way to avoid a concurrent error problem
-            for (Minefield mf : mfRemoved) {
-                server.removeMinefield(mf);
+            //Here we're doing damage for each hit with more standard artillery shells
+            while (nweaponsHit > 0) {
+                server.artilleryDamageArea(targetPos, aaa.getCoords(), atype,
+                        subjectId, ae, isFlak, altitude, mineClear, vPhaseReport,
+                        asfFlak, -1);
+                nweaponsHit--;
             }
+        } else {
+            //Now if we missed, resolve a strike on each scatter hex
+            for (Coords c : targets) {
+                //Accidental mine clearance...
+                if (!mineClear && game.containsMinefield(c)) {
+                    Enumeration<Minefield> minefields = game.getMinefields(c)
+                            .elements();
+                    ArrayList<Minefield> mfRemoved = new ArrayList<Minefield>();
+                    while (minefields.hasMoreElements()) {
+                        Minefield mf = minefields.nextElement();
+                        if (server.clearMinefield(mf, ae, 10, vPhaseReport)) {
+                            mfRemoved.add(mf);
+                        }
+                    }
+                    for (Minefield mf : mfRemoved) {
+                        server.removeMinefield(mf);
+                    }
+                }
+                server.artilleryDamageArea(c, aaa.getCoords(), atype,
+                        subjectId, ae, isFlak, altitude, mineClear, vPhaseReport,
+                        asfFlak, -1);
+            }
+            
         }
-
         return false;
     }
 
@@ -482,17 +621,13 @@ public class ArtilleryBayWeaponIndirectFireHandler extends AmmoBayWeaponHandler 
      */
     @Override
     protected int calcDamagePerHit() {
-        float toReturn = wtype.getDamage();
+        double toReturn = wtype.getDamage();
         // area effect damage is double
         if ((target instanceof Infantry) && !(target instanceof BattleArmor)) {
             toReturn /= 0.5;
         }
 
-        if (bGlancing) {
-            toReturn = (int) Math.floor(toReturn / 2.0);
-        }
-
-        // System.err.println("Attack is doing " + toReturn + " damage.");
+        toReturn = applyGlancingBlowModifier(toReturn, false);
 
         return (int) Math.ceil(toReturn);
     }
